added NPC movement action

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -1,6 +1,6 @@
 [docks]
 
-dock_3_selected_tab_idx=1
+dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/assets/sprites/tilesets/PixelFantasy_Outside_A1.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/assets/", "res://src/assets/sprites/", "res://src/assets/sprites/tilesets/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/assets/sprites/character_generator/Facial_Hair/1_2.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/assets/", "res://src/assets/sprites/", "res://src/assets/sprites/tilesets/", "res://src/assets/sprites/character_generator/", "res://src/assets/sprites/character_generator/Facial_Hair/", "res://src/assets/sprites/characters/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,7 +30,7 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://src/scenes/main.tscn")
 current_scene="res://src/scenes/main.tscn"
-center_split_offset=0
+center_split_offset=-1087
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 
@@ -39,6 +39,7 @@ selected_main_editor_idx=0
 screen=0
 mode="maximized"
 position=Vector2i(132, 138)
+size=Vector2i(5562, 3337)
 
 [ScriptEditor]
 
